--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -9,7 +9,7 @@
 
     @if (keywords == null)
     {
-        
+       <h1>Loading...</h1> 
     }else{
         <div class="grid-container">
             @foreach (var keyword in keywords)
