--- a/ProjectBank/Client/Pages/AccountSettings.razor
+++ b/ProjectBank/Client/Pages/AccountSettings.razor
@@ -4,8 +4,11 @@
 <!---- USINGS ATTRIBUTES AND INJECTIONS  ---->
 @inject NavigationManager uriHelper;
 @inject AuthenticationStateProvider AuthenticationStateProvider;
+@inject HttpClient Http
 @using Microsoft.AspNetCore.Authorization;
 @using System.Security.Claims;
+@using System.Net
+
 
 @attribute [Authorize]
 
@@ -79,9 +82,10 @@
     //DATA NOT YET LINKED TO CONTEXT
     string[] roleArray = new string[] {"Student", "Supervisor"};
     
-   private string name = "Unavailable";
-    private string email = "Unavailable";
-    string currentRole = "Unavail";
+   string name = "Unavailable";
+    string email = "Unavailable";
+    string currentRole = "Unavailable";
+    string token = "Unavailable";
     
     //PAGE SCRIPTS
     void Edit()
@@ -95,9 +99,15 @@ private IEnumerable<Claim> _claims = Enumerable.Empty<Claim>();
         var user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
        name = user.Identity.Name;
        _claims = user.Claims;
-        currentRole = user.FindFirst(c => c.Type.Contains("roles"))?.Value;
+        currentRole = user.FindFirst(c => c.Type.Contains("appRole"))?.Value;
        email = user.FindFirst(c => c.Type.Contains("preferred_username"))?.Value;
-       
+      token = user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+        AccountCreateDto account = new AccountCreateDto{
+         AzureAAdToken = token,
+         Name = name
+
+     };
+        var response = await Http.PostAsJsonAsync("api/Account",account);
   }
   
 
