--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -1,23 +1,45 @@
 ﻿@page "/search"
+@inject HttpClient Http
 
 <PageTitle>ProjectBank - Search</PageTitle>
 
 <div class="searchBar_wrapper">
-    <input type="text" class="searchBar" runat="server" name="Search_input" placeholder="Search... Project Title, Supervisor, or #Keyword">
-    <button class="btn_search" onclick=""> <span class="oi oi-magnifying-glass" style="color: #212121;" aria-hidden="true"></span></button>
+    <input @bind="SearchText" type="text" class="searchBar" runat="server" name="Search_input" placeholder="Search... Project Title, Supervisor, or #Keyword">
+    <button class="btn_search" @onclick="LoadProjects"> <span class="oi oi-magnifying-glass" style="color: #212121;" aria-hidden="true"></span></button>
 </div>
 
+<RadzenDataList WrapItems="true" AllowPaging="true" Data="@projects" TItem="ProjectDto">
+    <Template Context="project">
+        <RadzenCard Style="width:300px;">
+            <div class="row">
+            <div class="col-md-6">
+                <div>Title:</div>
+                <b>@project.Title</b>
+                <div style="margin-top:20px">Author:</div>
+                <b>@(project.AuthorName)</b>
+                <br />
+            </div>
+            </div>
+        </RadzenCard>
+    </Template>
+</RadzenDataList>
 
-
-@* <h1>Counter</h1>
-
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button> *@
 
 @code {
-    @*private void search(string i){
-        string input = i;
 
-    }*@
+    public string SearchText = "";
+    ProjectDto[]? projects;
+
+    async void LoadProjects()
+    {
+        try
+        {
+            projects = await Http.GetFromJsonAsync<ProjectDto[]?>($"/api/Project/{SearchText}");
+        }
+        catch(AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
+        await InvokeAsync(StateHasChanged);
+    }
 }
