Project page and frontpage changes

--- a/ProjectBank/Client/Pages/Frontpage.razor
+++ b/ProjectBank/Client/Pages/Frontpage.razor
@@ -1,9 +1,11 @@
 @page "/"
 @inject NavigationManager navigationManager
 
+<h1>Welcome to the ProjectBank</h1>
+
 @code{
     protected override async Task OnInitializedAsync()
     {
-        navigationManager.NavigateTo("/browse"); //Redirect from frontpage
+        
     }
 }
