--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -1,4 +1,5 @@
 ﻿@page "/search"
+@using System.Data.SqlTypes
 @inject HttpClient Http
 
 <PageTitle>ProjectBank - Search</PageTitle>
@@ -7,23 +8,6 @@
     <input @bind="SearchText" type="text" class="searchBar" runat="server" name="Search_input" placeholder="Search... Project Title, Supervisor, or #Keyword">
     <button class="btn_search" @onclick="LoadProjects"> <span class="oi oi-magnifying-glass" style="color: #212121;" aria-hidden="true"></span></button>
 </div>
-<br/>
-@*<RadzenDataList WrapItems="true" AllowPaging="true" Data="@projects" TItem="ProjectDto">
-    <Template Context="project">
-        <RadzenCard Style="width:600px; border-radius: 10px; color: #1a1e21; position: relative">
-            <div class="row">
-                <div class="col-md-6">
-                    <div>Title:</div>
-                    <b>@project.Title</b>
-                    <div style="margin-top:20px">Author:</div>
-                    <b>@(project.AuthorName)</b>
-                    <br />
-                </div>
-            </div>
-        </RadzenCard>
-    </Template>
-</RadzenDataList>*@
-
 
 @if (_projects == null)
 {
@@ -32,7 +16,7 @@
 else{
     @foreach (var project in _projects)
     {
-        <br/>
+     <br/>
        <div class="project_center">
           <div class="project_builder_search">
               <div class="project_search_content">
@@ -45,7 +29,28 @@ else{
                   <br>
                   <hr>
                   <br>
-                  
+                  <textarea class="project_search_description" readonly="readonly">@project.Description</textarea>
+                  @if (_isHidden)
+                  {
+                      <label id="see_more" @onclick="SwitchVisibilityState">See more</label>
+                  }
+                  @if (!_isHidden)
+                  {
+                      <div class="expanded_content" id="expand">
+                          <br>
+                          <hr>
+                          <br>
+                          <textarea class="project_search_keywords" readonly="readonly">@string.Join(", ",project.Keywords)</textarea> 
+                          <br>
+                          <hr>
+                          <br>
+                          <label class="project_search_Ects" readonly="readonly">Ects: @project.Ects </label> 
+                          <br>
+                          <label class="project_search_degree" readonly="readonly">Degree: @project.Degree </label>
+                          <br>
+                          <label id="close_more" @onclick="SwitchVisibilityState">Close</label>
+                      </div>
+                  }
               </div>
           </div>
        </div>  
@@ -54,7 +59,20 @@ else{
 
 
 @code {
-
+    private bool _isHidden = true;
+    private void SwitchVisibilityState()
+    {
+        if (_isHidden == true)
+        {
+            _isHidden = false;
+        }
+        else
+        {
+            _isHidden = true;
+        } 
+        
+    }
+    
     public string SearchText = "";
     
     ProjectDetailsDto[]? _projects;
