--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using System.Security.Claims
 @using System.Net
+@inject AuthenticationStateProvider AuthenticationStateProvider;
 
 <button id="GoBack_btn" onclick="location.href='/browse'">
     <label class="oi oi-arrow-circle-left"></label>
@@ -73,6 +74,8 @@ else
 
     private ProjectDto _currentProject;
     private ClaimsPrincipal? _user;
+    private IEnumerable<Claim>? _claims;
+    private string? _aToken;
 
     private string _keywordString;
     
@@ -83,7 +86,9 @@ else
         {
             _projects = await Http.GetFromJsonAsync<ProjectDto[]>($"/api/Keyword/{keyword}");
             _likedProjects = new List<ProjectDto>();
-            _user = Claims.getUser();
+            _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
+            _claims = _user.Claims;
+            _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
             if (_projects != null)
             {
                 _currentProject = _projects.First();
@@ -103,15 +108,16 @@ else
         Rewatch
     }
 
-    private void CheckClick(ClickType s) //vi skal ha lavet den async
+    private async void CheckClick(ClickType s) //vi skal ha lavet den async
     {
         if (s == ClickType.Like)
         {
             if (!_likedProjects.Contains(_currentProject))
             {
                 _likedProjects.Add(_currentProject);
-                //string aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
-                //put til account controller med azuread toke og projectDTO
+                var response = await Http.PostAsJsonAsync($"api/Account/{_currentProject.Id}", _aToken);
+                //så kan vi måske lave en if(response ==....) så vise noget forskelligt, hvis den nu ik kan finde projektet i databasen eller whatever.
+    
             }
             _idCounter++;
             _currentProject = _projects[(_idCounter) % _projects.Length];
