--- a/ProjectBank/Client/Pages/Frontpage.razor
+++ b/ProjectBank/Client/Pages/Frontpage.razor
@@ -1,11 +1,19 @@
 @page "/"
 @inject NavigationManager navigationManager
-
-<h1>Welcome to the ProjectBank</h1>
-
+<AuthorizeView>
+    <NotAuthorized>
+<h1>Welcome to the ProjectBank! </h1>
+<h3>You are currently not logged in and can therefore not access the rest of the ProjectBank. 
+Please press "Log in" in the top-left corner and log in.</h3>
+    </NotAuthorized>
+    <Authorized>
+        <h1>Hello and Welcome, @context.User.Identity.Name!</h1>
+        <h3>You are now signed in as and can use the ProjectBank. </h3>
+    </Authorized>
+</AuthorizeView>
 @code{
     protected override async Task OnInitializedAsync()
     {
-        
+       
     }
 }
