- Get account from token - related tests

--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -63,7 +63,10 @@
         var user = authState.User;
         if (user.Identity?.IsAuthenticated == true)
         {
-            var account = await Http.GetFromJsonAsync<AccountDetailsDto>("/api/Account/1");
+            var _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
+            var _claims = _user.Claims;
+            var _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+            var account = await Http.GetFromJsonAsync<AccountDetailsDto>($"/api/Account/{_aToken}");
             if (account != null)
             {
                 var savedProjects = account.SavedProjects;
