--- a/ProjectBank/Client/Pages/Frontpage.razor
+++ b/ProjectBank/Client/Pages/Frontpage.razor
@@ -9,6 +9,7 @@ Please press "Log in" in the top-left corner and log in.</h3>
     <Authorized>
         <h1>Hello and Welcome, @context.User.Identity.Name!</h1>
         <h3>You are now signed in as and can use the ProjectBank. </h3>
+        <ImageUploader></ImageUploader>
     </Authorized>
 </AuthorizeView>
 @code{
