SearchUI implemented search for keyword and author

--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -86,7 +86,7 @@ else{
     {
         try
         {
-            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/Project/{SearchText}");
+            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{SearchText}");
         }
         catch (AccessTokenNotAvailableException exception)
         {
