You can now upload images!! (#74)

--- a/ProjectBank/Client/Pages/Frontpage.razor
+++ b/ProjectBank/Client/Pages/Frontpage.razor
@@ -11,7 +11,10 @@ Please press "Log in" in the top-Right corner and log in.</h3>
     </NotAuthorized>
     <Authorized>
         <h1>Hello and Welcome, @context.User.Identity.Name!</h1>
-        <h3>You are now signed in as and can use the ProjectBank and has the role @currentRole. </h3>
+
+        <h3>You are now signed in as and can use the ProjectBank. </h3>
+        <ImageUploader></ImageUploader>
+
     </Authorized>
 </AuthorizeView>
 @code{
